# furiousapi-cli

./: package.json  pyproject.toml
.github/workflows/: ci.yml
furiousapi/cli/: __init__.py  utils.py
furiousapi/cli/generate/: cli.py  utils.py
furiousapi/cli/generate/templates/{{app_name}}/: dependencies.py.jinja2  models.py.jinja2  repository.py.jinja2  routes.py.jinja2
furiousapi/cli/postman/: __init__.py  cli.py  postman-convert-config.json  utils.py
